albus: Add 'vendor.' prefix to a vendor HAL service name
To prevent property name collisions between properties of system and
vendor, 'vendor.' prefix must be added to a vendor HAL service name.
You can see the details in http://go/treble-sysprop-compatibility.

Test: succeeded building and tested on a sailfish device.
Bug: 36796459
Change-Id: I48e6ee0ae3fe401e39efb273256d991fac676357

--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -298,8 +298,8 @@ on charger
 on moto-charger
     setprop ro.board.platform msm8953
     trigger firmware_mounts_complete
-    start charge_only_mode
-    start thermal-com
+    start vendor.charge_only_mode
+    start vendor.thermal-com
 
 on property:ro.boot.dualsim=true
    setprop persist.radio.multisim.config dsds
