albus : update NFC targets and configs
Change-Id: Ibef2f9f05d785b1ab10c6939ca7707ee3172224a

--- a/configs/libnfc-brcm.conf
+++ b/configs/libnfc-brcm.conf
@@ -1,8 +1,10 @@
 ###################### Start of libnfc-common.conf #######################
-
+# NXP Base Ver 8.0.E
 ###############################################################################
 # Application options
-APPL_TRACE_LEVEL=0xFF
+# Motorola liugy4 18/01/05 IKSWO-42693 TS27 15.9.3.2.1
+# Change from 0xFF to 0x04, disable DEBUB logs
+APPL_TRACE_LEVEL=0x04
 PROTOCOL_TRACE_LEVEL=0xFFFFFFFF
 
 ###############################################################################
@@ -14,7 +16,7 @@ PROTOCOL_TRACE_LEVEL=0xFFFFFFFF
 
 ###############################################################################
 # File used for NFA storage
-NFA_STORAGE="/data/nfc"
+NFA_STORAGE="/data/vendor/nfc"
 
 ###############################################################################
 # Snooze Mode Settings
@@ -348,22 +350,9 @@ POLLING_TECH_MASK=0xEF
 # NFA_TECHNOLOGY_MASK_F	            0x04    /* NFC Technology F             */
 # NFA_TECHNOLOGY_MASK_A_ACTIVE      0x40    /* NFC Technology A active mode */
 # NFA_TECHNOLOGY_MASK_F_ACTIVE      0x80    /* NFC Technology F active mode */
-P2P_LISTEN_TECH_MASK=0xC5
+P2P_LISTEN_TECH_MASK=0xC4
 
 PRESERVE_STORAGE=0x01
-
-###############################################################################
-# Override the stack default for NFA_EE_MAX_EE_SUPPORTED set in nfc_target.h.
-# The value is set to 3 by default as it assumes we will discover 0xF2,
-# 0xF3, and 0xF4. If a platform will exclude and SE, this value can be reduced
-# so that the stack will not wait any longer than necessary.
-
-# Maximum EE supported number
-# NXP PN547C2 0x02
-# NXP PN65T 0x03
-# NXP PN548C2 0x02
-# NXP PN66T 0x03
-NFA_MAX_EE_SUPPORTED=0x03
 
 ###############################################################################
 # NCI Hal Module name
