--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -1,8 +1,8 @@
 # Moto USB configuration
-import /system/vendor/etc/init/hw/init.mmi.usb.rc
+import /vendor/etc/init/hw/init.mmi.usb.rc
 
 # Moto Mod configuration
-import /system/vendor/etc/init/hw/init.mods.rc
+import /vendor/etc/init/hw/init.mods.rc
 
 on early-boot
     write /sys/module/subsystem_restart/parameters/disable_restart_work 0x0
@@ -280,7 +280,7 @@ on boot
    chown oem5001 oem_5001 /sys/bus/i2c/devices/2-005a/reduce
 
 # Pass carrier to wlan
-service init_wifi /system/vendor/bin/sh /system/vendor/bin/wlan_carrier_bin.sh
+service init_wifi /vendor/bin/sh /vendor/bin/wlan_carrier_bin.sh
     class main
     user root
     group root
@@ -312,19 +312,19 @@ on property:ro.boot.dualsim=false
 on property:ro.boot.hwrev=*
    start mmi-boot-sh
 
-service adspd /system/vendor/bin/adspd
+service adspd /vendor/bin/adspd
    class main
    socket adspdsock stream 0660 system audio
    user audio
    group audio input diag
 
-service mmi-boot-sh /system/vendor/bin/sh /system/vendor/bin/init.mmi.boot.sh
+service mmi-boot-sh /vendor/bin/sh /vendor/bin/init.mmi.boot.sh
     class core
     user root
     oneshot
     disabled
 
-service mmi-laser-sh /system/vendor/bin/sh /system/vendor/bin/init.mmi.laser.sh
+service mmi-laser-sh /vendor/bin/sh /vendor/bin/init.mmi.laser.sh
     class core
     user root
     oneshot
@@ -334,19 +334,19 @@ service charge_only_mode /system/bin/charge_only_mode
     group graphics system input
     disabled
 
-service sensors /system/vendor/bin/sensors.qcom
+service sensors /vendor/bin/sensors.qcom
     class core
     user root
     group root
 
-service vl53l1_daemon /system/vendor/bin/vl53l1_daemon
+service vl53l1_daemon /vendor/bin/vl53l1_daemon
     class late_start
     user root
     group root
     seclabel u:r:vl53l1:s0
     socket vl53l1_daemon stream 660 root system
 
-service thermal-com /system/vendor/bin/thermal-engine --minimode
+service thermal-com /vendor/bin/thermal-engine --minimode
     class main
     user root
     disabled
@@ -368,4 +368,4 @@ on property:ro.bootmode=normal
 
 on property:sys.boot_completed=1
     # Enable ZRAM on boot_complete
-    swapon_all /system/vendor/etc/fstab.qcom
+    swapon_all /vendor/etc/fstab.qcom
