albus:  Add 'vendor.' prefix to a vendor HAL service name
 * To prevent property name collisions between properties of system and
  vendor, 'vendor.' prefix must be added to a vendor HAL service name.
  You can see the details in go/treble-sysprop-compatibility documents.

Change-Id: I524657e41fe9a857fbb4422def263e684c50c0ba

--- a/rootdir/etc/init.mods.rc
+++ b/rootdir/etc/init.mods.rc
@@ -1,4 +1,4 @@
-service mods_camd /vendor/bin/mods_camd
+service vendor.mods_camd /vendor/bin/mods_camd
     class late_start
     user camera
     group camera system inet input graphics
