--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -280,7 +280,7 @@ on boot
    chown oem5001 oem_5001 /sys/bus/i2c/devices/2-005a/reduce
 
 # Pass carrier to wlan
-service init_wifi /vendor/bin/sh /vendor/bin/wlan_carrier_bin.sh
+service vendor.init_wifi /vendor/bin/sh /vendor/bin/wlan_carrier_bin.sh
     class main
     user root
     group root
@@ -298,8 +298,8 @@ on charger
 on moto-charger
     setprop ro.board.platform msm8953
     trigger firmware_mounts_complete
-    start charge_only_mode
-    start thermal-com
+    start vendor.charge_only_mode
+    start vendor.thermal-com
 
 on property:ro.boot.dualsim=true
    setprop persist.radio.multisim.config dsds
@@ -310,43 +310,43 @@ on property:ro.boot.dualsim=false
    setprop ro.telephony.default_network 10
 
 on property:ro.boot.hwrev=*
-   start mmi-boot-sh
+   start vendor.mmi-boot-sh
 
-service adspd /vendor/bin/adspd
+service vendor.adspd /vendor/bin/adspd
    class main
    socket adspdsock stream 0660 system audio
    user audio
    group audio input diag
 
-service mmi-boot-sh /vendor/bin/sh /vendor/bin/init.mmi.boot.sh
+service vendor.mmi-boot-sh /vendor/bin/sh /vendor/bin/init.mmi.boot.sh
     class core
     user root
     oneshot
     disabled
 
-service mmi-laser-sh /vendor/bin/sh /vendor/bin/init.mmi.laser.sh
+service vendor.mmi-laser-sh /vendor/bin/sh /vendor/bin/init.mmi.laser.sh
     class core
     user root
     oneshot
 
-service charge_only_mode /vendor/bin/charge_only_mode
+service vendor.charge_only_mode /vendor/bin/charge_only_mode
     user root
     group graphics system input
     disabled
 
-service sensors /vendor/bin/sensors.qcom
+service vendor.sensors /vendor/bin/sensors.qcom
     class core
     user root
     group root
 
-service vl53l1_daemon /vendor/bin/vl53l1_daemon
+service vendor.vl53l1_daemon /vendor/bin/vl53l1_daemon
     class late_start
     user root
     group root
     seclabel u:r:vl53l1:s0
     socket vl53l1_daemon stream 660 root system
 
-service thermal-com /vendor/bin/thermal-engine --minimode
+service vendor.thermal-com /vendor/bin/thermal-engine --minimode
     class main
     user root
     disabled
