albus : switch to P CAF bt hal
Change-Id: I8433cd2bc0b1a1cf9ffa772ffc099943ac28a53f

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -654,10 +654,10 @@ service vendor.rmt_storage /vendor/bin/rmt_storage
     shutdown critical
     writepid /dev/cpuset/system-background/tasks
 
-on property:wc_transport.start_fmhci=true
+on property:vendor.wc_transport.start_fmhci=true
     start fmhal_service
 
-on property:wc_transport.start_fmhci=false
+on property:vendor.wc_transport.start_fmhci=false
     stop fmhal_service
 
 service start_hci_filter /system/bin/wcnss_filter
